--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,26 +1,16 @@
 .header {
-  text-align: center;
-  padding: 2rem 0 1rem;
-}
+  width: 320;
+  height: 56.00002670288086;
+  top: 28px;
+  border-width: 1px;
 
-.header__logo {
-  width: 40%;
-  max-width: 254.84px;
-  height: auto;
-  margin: 0 auto 0.5rem;
-  display: block;
 }
-
-@media screen and (min-width: 768px) {
-  .header__logo {
-    width: 254.84px;
+.logo_header {
+  display: grid;
+  justify-content: flex-start;
+  width: 126;
+  height: 24;
+  top: 28px;
+  left: 27px;
+  margin: 36px;
   }
-}
-
-.header__title {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
-  font-size: 1.5rem;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-}
