--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -51,7 +51,7 @@
   border: 1px solid #ffffff;
   background-color: transparent;
   cursor: pointer;
-  background-image: url("../images/Vector.svg"); /*por qué no se ve? :( */
+  background-image: url("../images/Vector.svg"); 
   background-repeat: no-repeat;
   background-position: center;
   background-size: 12px 12px;
@@ -92,4 +92,103 @@
 }
 
 
-/*FALTA DIEÑO RESPONSIVO*/
+/* PROFILE DESKTOP/TABLET LAYOUT USING GRID */
+@media screen and (min-width: 758px) {
+  .profile {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+  }
+
+  .profile__container {
+    display: grid;
+    grid-template-columns: 168.75px 1fr 282px;
+    grid-template-areas: 
+      "avatar info button";
+    align-items: center;
+    width: 880px;
+    height: 127.5px; /* matches avatar height */
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
+    column-gap: 24px;
+  }
+
+  .profile__avatar-wrapper {
+    grid-area: avatar;
+    width: 168.75px;
+    height: 127.5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .profile__avatar {
+    width: 127.5px;
+    height: 127.5px;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+
+  .profile__name-wrapper {
+    grid-area: info;
+    display: grid;
+    grid-template-columns: auto 18px;
+    grid-template-rows: 39px 14px;
+    grid-template-areas:
+      "name edit"
+      "description description";
+    column-gap: 10px;
+    row-gap: 6px;
+    width: 415px;
+    height: 77px;
+  }
+
+  .profile__name {
+    grid-area: name;
+    font-size: 22px;
+    font-weight: 500;
+    margin: 0;
+    height: 39px;
+    text-align: left;
+    width: 373px;
+  }
+
+  .profile__edit-button {
+    grid-area: edit;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    background-image: url("../images/Vector.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 12px 12px;
+    padding: 0;
+    cursor: pointer;
+  }
+
+  .profile__description {
+    grid-area: description;
+    font-size: 14px;
+    font-weight: 400;
+    margin: 0;
+    text-align: left;
+  }
+
+  .profile__add-button {
+    grid-area: button;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    border-radius: 2px;
+    border: 2px solid #ffffff;
+    background-color: transparent;
+    color: #ffffff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+}
