--- a/pages/index.css
+++ b/pages/index.css
@@ -7,4 +7,6 @@
 @import url("../blocks/footer.css");
 @import url("../blocks/main.css");
 @import url("../blocks/modal.css"); /*botón JS*/
+@import url("../blocks/modal-add-memory.css");
+
 
