--- a/blocks/header.css
+++ b/blocks/header.css
@@ -14,3 +14,37 @@
   left: 27px;
   margin: 36px;
   }
+
+ @media screen and (min-width: 758px) and (max-width: 1279px) {
+ .header {
+    display: flex;
+    justify-content: flex-start;
+    padding-top: 45px;
+    padding-left: 200px;
+    box-sizing: border-box;
+  }
+
+  .logo_header {
+    width: 173px;
+    height: 33px;
+    margin: 0;
+  }
+}
+
+
+@media screen and (min-width: 1280px) {
+  .header {
+    display: flex;
+    justify-content: flex-start;
+    padding-top: 45px;
+    padding-left: 200px;
+    box-sizing: border-box;
+  }
+
+  .logo_header {
+    width: 173px;
+    height: 33px;
+    margin: 0;
+  }
+}
+
