--- a/blocks/modal-add-memory.css
+++ b/blocks/modal-add-memory.css
@@ -1,4 +1,3 @@
-/* BLOQUE CSS PARA EL MODAL: add-memory-modal */
 .modal {
   display: none;
   position: fixed;
@@ -78,7 +77,7 @@
 
 .modal__upload-button:hover {
   background-color: #f0f0f0;
-  border-color: #1db954; /* verde referencia */
+  border-color: #1db954; 
 }
 
 .modal__upload-icon {
@@ -102,4 +101,38 @@
 
 .modal__save-button:hover {
   background-color: #222222;
+}
+
+@media screen and (min-width: 758px) {
+  .modal__content {
+    width: 430px;
+    padding: 32px;
+  }
+
+  .modal__title {
+    font-size: 20px;
+  }
+
+  .modal__save-button,
+  .modal__upload-button {
+    font-size: 18px;
+    height: 56px;
+  }
+
+  .modal__upload-icon {
+    width: 20px;
+    height: 20px;
+  }
+
+  .modal__input {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .modal__content {
+    width: 500px;
+    padding: 40px;
+    border-radius: 12px;
+  }
 }
