--- a/blocks/header.css
+++ b/blocks/header.css
@@ -6,7 +6,7 @@
 
 .header__container {
   width: fit-content;
-  margin: 28px 0 24px 27px; /* mobile: left=27px */
+  margin: 28px 0 24px 27px; 
 }
 
 .logo_header {
@@ -19,9 +19,10 @@
   width: 100%;
   height: auto;
 }
+
 @media screen and (min-width: 768px) {
   .header__container {
-    margin: 45px 0 24px 200px; /* top=45px, left=200px */
+    margin: 45px 0 24px 200px;
   }
 
   .logo_header {
