--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -24,7 +24,7 @@
   position: relative;
 }
 
-.modal__close-button {
+/*.modal__close-button {
   position: absolute;
   top: 12px;
   right: 12px;
@@ -33,7 +33,24 @@
   background: transparent url("./images/Close Icon.svg") center/contain no-repeat;
   border: none;
   cursor: pointer;
+}*/
+
+.modal__close-button {
+  position: absolute;
+  top: -40px;
+  right: -40px;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  background-image: url("data:image/svg+xml,%3Csvg fill='white' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18.3 5.71a1 1 0 0 0-1.42 0L12 10.59 7.12 5.7a1 1 0 0 0-1.41 1.42L10.59 12l-4.88 4.88a1 1 0 1 0 1.41 1.41L12 13.41l4.88 4.88a1 1 0 0 0 1.42-1.41L13.41 12l4.89-4.88a1 1 0 0 0 0-1.41z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 24px 24px;
+  border: none;
+  cursor: pointer;
+  z-index: 1001;
 }
+
 
 .modal__title {
   font-size: 18px;
@@ -71,5 +88,3 @@
 .modal__save-button:hover {
   background-color: #222222;
 }
-
-/*que el botón flote*/
